Finished for tonight, just made a basic footer and fixed sponsors spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,7 @@ nav a.active {
   vertical-align: middle;
   max-width: 100px;
   max-height: 50px;
+  padding-bottom: 10px;
 }
 
 @media screen and (max-width: 600px) {
